syntax.output
Grammar

    0 $accept: program $end

    1 program: declarations
    2        | ε

    3 declarations: scheduler dispatcher processorMult stateRecord

    4 dispatcher: DISPATCH_T_T ID ATTRIB_OP OPEN_B dispMult CLOSE_B SEMIC

    5 dispMult: dispMult COMMA dispDecl
    6         | dispDecl

    7 dispDecl: ID ARROW OPEN_B processorIds CLOSE_B SEMIC

    8 processorIds: processorIds COMMA ID
    9             | ID

   10 processorMult: processorMult processorDecl
   11              | processorDecl

   12 processorDecl: PROCESSOR_T ID OPEN_B comMultStmt CLOSE_B

   13 stateRecord: STATE_R_T ID OPEN_B srVariables CLOSE_B

   14 srVariables: srVariables INT_T ID SEMIC
   15            | INT_T ID SEMIC

   16 scheduler: SCHEDULER_T ID OPEN_B queues enquFunc nextEvent CLOSE_B

   17 queues: queues queueAndDrop
   18       | queueAndDrop

   19 queueAndDrop: qTypeDecl dropDecl queueDecl

   20 qTypeDecl: queueType
   21          | ε

   22 queueType: EVENT_T ID OPEN_B queueTypeDecl CLOSE_B SEMIC

   23 queueTypeDecl: queueTypeDecl INT_T ID SEMIC
   24              | INT_T ID SEMIC

   25 queueDecl: QUEUE_T LESSER_OP ID GREATER_OP ID OPEN_P CONST_INT COMMA CONST_INT COMMA CONST_INT COMMA ID CLOSE_P

   26 dropDecl: dropFunc
   27         | ε

   28 dropFunc: INT_T ID OPEN_P QUEUE_T ID COMMA EVENT_T ID CLOSE_P OPEN_B dropMultStmt CLOSE_B

   29 enquFunc: BOOL_T ENQUEUE OPEN_P EVENT_T ID CLOSE_P OPEN_B comMultStmt CLOSE_B

   30 nextEvent: EVENT_T NEXT_EVENT OPEN_P CLOSE_P OPEN_B comMultStmt CLOSE_B

   31 dropMultStmt: dropMultStmt dropStmt
   32             | dropStmt

   33 dropStmt: dropCondition
   34         | dropLoop
   35         | attribution SEMIC
   36         | return SEMIC
   37         | varDecl SEMIC

   38 comMultStmt: comMultStmt commonStmt
   39            | commonStmt

   40 commonStmt: comCondition
   41           | comLoop
   42           | attribution SEMIC
   43           | return SEMIC
   44           | varDecl SEMIC

   45 dropCondition: IF OPEN_P attribution CLOSE_P OPEN_B dropMultStmt CLOSE_B
   46              | IF OPEN_P attribution CLOSE_P OPEN_B dropMultStmt CLOSE_B ELSE OPEN_B dropMultStmt CLOSE_B

   47 comCondition: IF OPEN_P attribution CLOSE_P OPEN_B comMultStmt CLOSE_B
   48             | IF OPEN_P attribution CLOSE_P OPEN_B comMultStmt CLOSE_B ELSE OPEN_B comMultStmt CLOSE_B

   49 dropLoop: FOREACH ID IN ID OPEN_B dropMultStmt CLOSE_B

   50 comLoop: FOR OPEN_P loopArgs CLOSE_P OPEN_B comMultStmt CLOSE_B

   51 loopArgs: firstArgument SEMIC argument SEMIC argument

   52 firstArgument: varDecl
   53              | attribution
   54              | ε

   55 argument: attribution
   56         | ε

   57 return: RETURN attribution

   58 varDecl: INT_T ID
   59        | INT_T ID ATTRIB_OP attribution

   60 attribution: ID ATTRIB_OP logicalOr
   61            | logicalOr

   62 logicalOr: logicalOr LOGIC_OR_OP logicalAnd
   63          | logicalAnd

   64 logicalAnd: logicalAnd LOGIC_AND_OP compareExp
   65           | compareExp

   66 compareExp: compareExp RELAT_LOW_OP relationExp
   67           | relationExp

   68 relationExp: relationExp GREATER_OP lowMathExp
   69            | relationExp LESSER_OP lowMathExp
   70            | relationExp RELAT_HIGH_OP lowMathExp
   71            | lowMathExp

   72 lowMathExp: lowMathExp MATH_ADD_OP highMathExp
   73           | lowMathExp MATH_SUB_OP highMathExp
   74           | highMathExp

   75 highMathExp: highMathExp MATH_HIGH_OP unaryExp
   76            | unaryExp

   77 unaryExp: LOGIC_NOT_OP unaryExp
   78         | MATH_SUB_OP unaryExp
   79         | TYPE OPEN_P unaryExp CLOSE_P
   80         | element

   81 element: ID
   82        | CONST_INT
   83        | OPEN_P attribution CLOSE_P


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT_T <token> (258) 14 15 23 24 28 58 59
    BOOL_T <token> (259) 29
    EVENT_T <token> (260) 22 28 29 30
    QUEUE_T <token> (261) 25 28
    SCHEDULER_T <token> (262) 16
    DISPATCH_T_T <token> (263) 4
    PROCESSOR_T <token> (264) 12
    STATE_R_T <token> (265) 13
    CONST_INT <token> (266) 25 82
    MATH_HIGH_OP <token> (267) 75
    MATH_ADD_OP <token> (268) 72
    MATH_SUB_OP <token> (269) 73 78
    LOGIC_OR_OP <token> (270) 62
    LOGIC_AND_OP <token> (271) 64
    LOGIC_NOT_OP <token> (272) 77
    GREATER_OP <token> (273) 25 68
    LESSER_OP <token> (274) 25 69
    RELAT_HIGH_OP <token> (275) 70
    RELAT_LOW_OP <token> (276) 66
    ATTRIB_OP <token> (277) 4 59 60
    IF <token> (278) 45 46 47 48
    ELSE <token> (279) 46 48
    FOR <token> (280) 50
    FOREACH <token> (281) 49
    IN <token> (282) 49
    RETURN <token> (283) 57
    TYPE <token> (284) 79
    NEXT_EVENT <token> (285) 30
    ENQUEUE <token> (286) 29
    ID <token> (287) 4 7 8 9 12 13 14 15 16 22 23 24 25 28 29 49 58 59 60 81
    OPEN_B <token> (288) 4 7 12 13 16 22 28 29 30 45 46 47 48 49 50
    CLOSE_B <token> (289) 4 7 12 13 16 22 28 29 30 45 46 47 48 49 50
    OPEN_P <token> (290) 25 28 29 30 45 46 47 48 50 79 83
    CLOSE_P <token> (291) 25 28 29 30 45 46 47 48 50 79 83
    COMMA <token> (292) 5 8 25 28
    SEMIC <token> (293) 4 7 14 15 22 23 24 35 36 37 42 43 44 51
    ARROW <token> (294) 7


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program <node> (41)
        on left: 1 2
        on right: 0
    declarations <node> (42)
        on left: 3
        on right: 1
    dispatcher <node> (43)
        on left: 4
        on right: 3
    dispMult <node> (44)
        on left: 5 6
        on right: 4 5
    dispDecl <node> (45)
        on left: 7
        on right: 5 6
    processorIds <node> (46)
        on left: 8 9
        on right: 7 8
    processorMult <node> (47)
        on left: 10 11
        on right: 3 10
    processorDecl <node> (48)
        on left: 12
        on right: 10 11
    stateRecord <node> (49)
        on left: 13
        on right: 3
    srVariables <node> (50)
        on left: 14 15
        on right: 13 14
    scheduler <node> (51)
        on left: 16
        on right: 3
    queues <node> (52)
        on left: 17 18
        on right: 16 17
    queueAndDrop <node> (53)
        on left: 19
        on right: 17 18
    qTypeDecl <node> (54)
        on left: 20 21
        on right: 19
    queueType <node> (55)
        on left: 22
        on right: 20
    queueTypeDecl <node> (56)
        on left: 23 24
        on right: 22 23
    queueDecl <node> (57)
        on left: 25
        on right: 19
    dropDecl <node> (58)
        on left: 26 27
        on right: 19
    dropFunc <node> (59)
        on left: 28
        on right: 26
    enquFunc <node> (60)
        on left: 29
        on right: 16
    nextEvent <node> (61)
        on left: 30
        on right: 16
    dropMultStmt <node> (62)
        on left: 31 32
        on right: 28 31 45 46 49
    dropStmt <node> (63)
        on left: 33 34 35 36 37
        on right: 31 32
    comMultStmt <node> (64)
        on left: 38 39
        on right: 12 29 30 38 47 48 50
    commonStmt <node> (65)
        on left: 40 41 42 43 44
        on right: 38 39
    dropCondition <node> (66)
        on left: 45 46
        on right: 33
    comCondition <node> (67)
        on left: 47 48
        on right: 40
    dropLoop <node> (68)
        on left: 49
        on right: 34
    comLoop <node> (69)
        on left: 50
        on right: 41
    loopArgs <node> (70)
        on left: 51
        on right: 50
    firstArgument <node> (71)
        on left: 52 53 54
        on right: 51
    argument <node> (72)
        on left: 55 56
        on right: 51
    return <node> (73)
        on left: 57
        on right: 36 43
    varDecl <node> (74)
        on left: 58 59
        on right: 37 44 52
    attribution <node> (75)
        on left: 60 61
        on right: 35 42 45 46 47 48 53 55 57 59 83
    logicalOr <node> (76)
        on left: 62 63
        on right: 60 61 62
    logicalAnd <node> (77)
        on left: 64 65
        on right: 62 63 64
    compareExp <node> (78)
        on left: 66 67
        on right: 64 65 66
    relationExp <node> (79)
        on left: 68 69 70 71
        on right: 66 67 68 69 70
    lowMathExp <node> (80)
        on left: 72 73 74
        on right: 68 69 70 71 72 73
    highMathExp <node> (81)
        on left: 75 76
        on right: 72 73 74 75
    unaryExp <node> (82)
        on left: 77 78 79 80
        on right: 75 76 77 78 79
    element <node> (83)
        on left: 81 82 83
        on right: 80


State 0

    0 $accept: • program $end

    SCHEDULER_T  shift, and go to state 1

    $end  reduce using rule 2 (program)

    program       go to state 2
    declarations  go to state 3
    scheduler     go to state 4


State 1

   16 scheduler: SCHEDULER_T • ID OPEN_B queues enquFunc nextEvent CLOSE_B

    ID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: declarations •

    $end  reduce using rule 1 (program)


State 4

    3 declarations: scheduler • dispatcher processorMult stateRecord

    DISPATCH_T_T  shift, and go to state 7

    dispatcher  go to state 8


State 5

   16 scheduler: SCHEDULER_T ID • OPEN_B queues enquFunc nextEvent CLOSE_B

    OPEN_B  shift, and go to state 9


State 6

    0 $accept: program $end •

    $default  accept


State 7

    4 dispatcher: DISPATCH_T_T • ID ATTRIB_OP OPEN_B dispMult CLOSE_B SEMIC

    ID  shift, and go to state 10


State 8

    3 declarations: scheduler dispatcher • processorMult stateRecord

    PROCESSOR_T  shift, and go to state 11

    processorMult  go to state 12
    processorDecl  go to state 13


State 9

   16 scheduler: SCHEDULER_T ID OPEN_B • queues enquFunc nextEvent CLOSE_B

    EVENT_T  shift, and go to state 14

    INT_T    reduce using rule 21 (qTypeDecl)
    QUEUE_T  reduce using rule 21 (qTypeDecl)

    queues        go to state 15
    queueAndDrop  go to state 16
    qTypeDecl     go to state 17
    queueType     go to state 18


State 10

    4 dispatcher: DISPATCH_T_T ID • ATTRIB_OP OPEN_B dispMult CLOSE_B SEMIC

    ATTRIB_OP  shift, and go to state 19


State 11

   12 processorDecl: PROCESSOR_T • ID OPEN_B comMultStmt CLOSE_B

    ID  shift, and go to state 20


State 12

    3 declarations: scheduler dispatcher processorMult • stateRecord
   10 processorMult: processorMult • processorDecl

    PROCESSOR_T  shift, and go to state 11
    STATE_R_T    shift, and go to state 21

    processorDecl  go to state 22
    stateRecord    go to state 23


State 13

   11 processorMult: processorDecl •

    PROCESSOR_T  reduce using rule 11 (processorMult)
    STATE_R_T    reduce using rule 11 (processorMult)


State 14

   22 queueType: EVENT_T • ID OPEN_B queueTypeDecl CLOSE_B SEMIC

    ID  shift, and go to state 24


State 15

   16 scheduler: SCHEDULER_T ID OPEN_B queues • enquFunc nextEvent CLOSE_B
   17 queues: queues • queueAndDrop

    BOOL_T   shift, and go to state 25
    EVENT_T  shift, and go to state 14

    INT_T    reduce using rule 21 (qTypeDecl)
    QUEUE_T  reduce using rule 21 (qTypeDecl)

    queueAndDrop  go to state 26
    qTypeDecl     go to state 17
    queueType     go to state 18
    enquFunc      go to state 27


State 16

   18 queues: queueAndDrop •

    INT_T    reduce using rule 18 (queues)
    BOOL_T   reduce using rule 18 (queues)
    EVENT_T  reduce using rule 18 (queues)
    QUEUE_T  reduce using rule 18 (queues)


State 17

   19 queueAndDrop: qTypeDecl • dropDecl queueDecl

    INT_T  shift, and go to state 28

    QUEUE_T  reduce using rule 27 (dropDecl)

    dropDecl  go to state 29
    dropFunc  go to state 30


State 18

   20 qTypeDecl: queueType •

    INT_T    reduce using rule 20 (qTypeDecl)
    QUEUE_T  reduce using rule 20 (qTypeDecl)


State 19

    4 dispatcher: DISPATCH_T_T ID ATTRIB_OP • OPEN_B dispMult CLOSE_B SEMIC

    OPEN_B  shift, and go to state 31


State 20

   12 processorDecl: PROCESSOR_T ID • OPEN_B comMultStmt CLOSE_B

    OPEN_B  shift, and go to state 32


State 21

   13 stateRecord: STATE_R_T • ID OPEN_B srVariables CLOSE_B

    ID  shift, and go to state 33


State 22

   10 processorMult: processorMult processorDecl •

    PROCESSOR_T  reduce using rule 10 (processorMult)
    STATE_R_T    reduce using rule 10 (processorMult)


State 23

    3 declarations: scheduler dispatcher processorMult stateRecord •

    $end  reduce using rule 3 (declarations)


State 24

   22 queueType: EVENT_T ID • OPEN_B queueTypeDecl CLOSE_B SEMIC

    OPEN_B  shift, and go to state 34


State 25

   29 enquFunc: BOOL_T • ENQUEUE OPEN_P EVENT_T ID CLOSE_P OPEN_B comMultStmt CLOSE_B

    ENQUEUE  shift, and go to state 35


State 26

   17 queues: queues queueAndDrop •

    INT_T    reduce using rule 17 (queues)
    BOOL_T   reduce using rule 17 (queues)
    EVENT_T  reduce using rule 17 (queues)
    QUEUE_T  reduce using rule 17 (queues)


State 27

   16 scheduler: SCHEDULER_T ID OPEN_B queues enquFunc • nextEvent CLOSE_B

    EVENT_T  shift, and go to state 36

    nextEvent  go to state 37


State 28

   28 dropFunc: INT_T • ID OPEN_P QUEUE_T ID COMMA EVENT_T ID CLOSE_P OPEN_B dropMultStmt CLOSE_B

    ID  shift, and go to state 38


State 29

   19 queueAndDrop: qTypeDecl dropDecl • queueDecl

    QUEUE_T  shift, and go to state 39

    queueDecl  go to state 40


State 30

   26 dropDecl: dropFunc •

    QUEUE_T  reduce using rule 26 (dropDecl)


State 31

    4 dispatcher: DISPATCH_T_T ID ATTRIB_OP OPEN_B • dispMult CLOSE_B SEMIC

    ID  shift, and go to state 41

    dispMult  go to state 42
    dispDecl  go to state 43


State 32

   12 processorDecl: PROCESSOR_T ID OPEN_B • comMultStmt CLOSE_B

    INT_T         shift, and go to state 44
    CONST_INT     shift, and go to state 45
    MATH_SUB_OP   shift, and go to state 46
    LOGIC_NOT_OP  shift, and go to state 47
    IF            shift, and go to state 48
    FOR           shift, and go to state 49
    RETURN        shift, and go to state 50
    TYPE          shift, and go to state 51
    ID            shift, and go to state 52
    OPEN_P        shift, and go to state 53

    comMultStmt   go to state 54
    commonStmt    go to state 55
    comCondition  go to state 56
    comLoop       go to state 57
    return        go to state 58
    varDecl       go to state 59
    attribution   go to state 60
    logicalOr     go to state 61
    logicalAnd    go to state 62
    compareExp    go to state 63
    relationExp   go to state 64
    lowMathExp    go to state 65
    highMathExp   go to state 66
    unaryExp      go to state 67
    element       go to state 68


State 33

   13 stateRecord: STATE_R_T ID • OPEN_B srVariables CLOSE_B

    OPEN_B  shift, and go to state 69


State 34

   22 queueType: EVENT_T ID OPEN_B • queueTypeDecl CLOSE_B SEMIC

    INT_T  shift, and go to state 70

    queueTypeDecl  go to state 71


State 35

   29 enquFunc: BOOL_T ENQUEUE • OPEN_P EVENT_T ID CLOSE_P OPEN_B comMultStmt CLOSE_B

    OPEN_P  shift, and go to state 72


State 36

   30 nextEvent: EVENT_T • NEXT_EVENT OPEN_P CLOSE_P OPEN_B comMultStmt CLOSE_B

    NEXT_EVENT  shift, and go to state 73


State 37

   16 scheduler: SCHEDULER_T ID OPEN_B queues enquFunc nextEvent • CLOSE_B

    CLOSE_B  shift, and go to state 74


State 38

   28 dropFunc: INT_T ID • OPEN_P QUEUE_T ID COMMA EVENT_T ID CLOSE_P OPEN_B dropMultStmt CLOSE_B

    OPEN_P  shift, and go to state 75


State 39

   25 queueDecl: QUEUE_T • LESSER_OP ID GREATER_OP ID OPEN_P CONST_INT COMMA CONST_INT COMMA CONST_INT COMMA ID CLOSE_P

    LESSER_OP  shift, and go to state 76


State 40

   19 queueAndDrop: qTypeDecl dropDecl queueDecl •

    INT_T    reduce using rule 19 (queueAndDrop)
    BOOL_T   reduce using rule 19 (queueAndDrop)
    EVENT_T  reduce using rule 19 (queueAndDrop)
    QUEUE_T  reduce using rule 19 (queueAndDrop)


State 41

    7 dispDecl: ID • ARROW OPEN_B processorIds CLOSE_B SEMIC

    ARROW  shift, and go to state 77


State 42

    4 dispatcher: DISPATCH_T_T ID ATTRIB_OP OPEN_B dispMult • CLOSE_B SEMIC
    5 dispMult: dispMult • COMMA dispDecl

    CLOSE_B  shift, and go to state 78
    COMMA    shift, and go to state 79


State 43

    6 dispMult: dispDecl •

    CLOSE_B  reduce using rule 6 (dispMult)
    COMMA    reduce using rule 6 (dispMult)


State 44

   58 varDecl: INT_T • ID
   59        | INT_T • ID ATTRIB_OP attribution

    ID  shift, and go to state 80


State 45

   82 element: CONST_INT •

    MATH_HIGH_OP   reduce using rule 82 (element)
    MATH_ADD_OP    reduce using rule 82 (element)
    MATH_SUB_OP    reduce using rule 82 (element)
    LOGIC_OR_OP    reduce using rule 82 (element)
    LOGIC_AND_OP   reduce using rule 82 (element)
    GREATER_OP     reduce using rule 82 (element)
    LESSER_OP      reduce using rule 82 (element)
    RELAT_HIGH_OP  reduce using rule 82 (element)
    RELAT_LOW_OP   reduce using rule 82 (element)
    SEMIC          reduce using rule 82 (element)


State 46

   78 unaryExp: MATH_SUB_OP • unaryExp

    CONST_INT     shift, and go to state 45
    MATH_SUB_OP   shift, and go to state 46
    LOGIC_NOT_OP  shift, and go to state 47
    TYPE          shift, and go to state 51
    ID            shift, and go to state 81
    OPEN_P        shift, and go to state 53

    unaryExp  go to state 82
    element   go to state 68


State 47

   77 unaryExp: LOGIC_NOT_OP • unaryExp

    CONST_INT     shift, and go to state 45
    MATH_SUB_OP   shift, and go to state 46
    LOGIC_NOT_OP  shift, and go to state 47
    TYPE          shift, and go to state 51
    ID            shift, and go to state 81
    OPEN_P        shift, and go to state 53

    unaryExp  go to state 83
    element   go to state 68


State 48

   47 comCondition: IF • OPEN_P attribution CLOSE_P OPEN_B comMultStmt CLOSE_B
   48             | IF • OPEN_P attribution CLOSE_P OPEN_B comMultStmt CLOSE_B ELSE OPEN_B comMultStmt CLOSE_B

    OPEN_P  shift, and go to state 84


State 49

   50 comLoop: FOR • OPEN_P loopArgs CLOSE_P OPEN_B comMultStmt CLOSE_B

    OPEN_P  shift, and go to state 85


State 50

   57 return: RETURN • attribution

    CONST_INT     shift, and go to state 45
    MATH_SUB_OP   shift, and go to state 46
    LOGIC_NOT_OP  shift, and go to state 47
    TYPE          shift, and go to state 51
    ID            shift, and go to state 52
    OPEN_P        shift, and go to state 53

    attribution  go to state 86
    logicalOr    go to state 61
    logicalAnd   go to state 62
    compareExp   go to state 63
    relationExp  go to state 64
    lowMathExp   go to state 65
    highMathExp  go to state 66
    unaryExp     go to state 67
    element      go to state 68


State 51

   79 unaryExp: TYPE • OPEN_P unaryExp CLOSE_P

    OPEN_P  shift, and go to state 87


State 52

   60 attribution: ID • ATTRIB_OP logicalOr
   81 element: ID •

    ATTRIB_OP  shift, and go to state 88

    MATH_HIGH_OP   reduce using rule 81 (element)
    MATH_ADD_OP    reduce using rule 81 (element)
    MATH_SUB_OP    reduce using rule 81 (element)
    LOGIC_OR_OP    reduce using rule 81 (element)
    LOGIC_AND_OP   reduce using rule 81 (element)
    GREATER_OP     reduce using rule 81 (element)
    LESSER_OP      reduce using rule 81 (element)
    RELAT_HIGH_OP  reduce using rule 81 (element)
    RELAT_LOW_OP   reduce using rule 81 (element)
    SEMIC          reduce using rule 81 (element)


State 53

   83 element: OPEN_P • attribution CLOSE_P

    CONST_INT     shift, and go to state 225
    MATH_SUB_OP   shift, and go to state 226
    LOGIC_NOT_OP  shift, and go to state 227
    TYPE          shift, and go to state 228
    ID            shift, and go to state 229
    OPEN_P        shift, and go to state 230

    attribution  go to state 89
    logicalOr    go to state 231
    logicalAnd   go to state 232
    compareExp   go to state 233
    relationExp  go to state 234
    lowMathExp   go to state 235
    highMathExp  go to state 236
    unaryExp     go to state 237
    element      go to state 238


State 54

   12 processorDecl: PROCESSOR_T ID OPEN_B comMultStmt • CLOSE_B
   38 comMultStmt: comMultStmt • commonStmt

    INT_T         shift, and go to state 44
    CONST_INT     shift, and go to state 45
    MATH_SUB_OP   shift, and go to state 46
    LOGIC_NOT_OP  shift, and go to state 47
    IF            shift, and go to state 48
    FOR           shift, and go to state 49
    RETURN        shift, and go to state 50
    TYPE          shift, and go to state 51
    ID            shift, and go to state 52
    CLOSE_B       shift, and go to state 90
    OPEN_P        shift, and go to state 53

    commonStmt    go to state 91
    comCondition  go to state 56
    comLoop       go to state 57
    return        go to state 58
    varDecl       go to state 59
    attribution   go to state 60
    logicalOr     go to state 61
    logicalAnd    go to state 62
    compareExp    go to state 63
    relationExp   go to state 64
    lowMathExp    go to state 65
    highMathExp   go to state 66
    unaryExp      go to state 67
    element       go to state 68


State 55

   39 comMultStmt: commonStmt •

    INT_T         reduce using rule 39 (comMultStmt)
    CONST_INT     reduce using rule 39 (comMultStmt)
    MATH_SUB_OP   reduce using rule 39 (comMultStmt)
    LOGIC_NOT_OP  reduce using rule 39 (comMultStmt)
    IF            reduce using rule 39 (comMultStmt)
    FOR           reduce using rule 39 (comMultStmt)
    RETURN        reduce using rule 39 (comMultStmt)
    TYPE          reduce using rule 39 (comMultStmt)
    ID            reduce using rule 39 (comMultStmt)
    CLOSE_B       reduce using rule 39 (comMultStmt)
    OPEN_P        reduce using rule 39 (comMultStmt)


State 56

   40 commonStmt: comCondition •

    INT_T         reduce using rule 40 (commonStmt)
    CONST_INT     reduce using rule 40 (commonStmt)
    MATH_SUB_OP   reduce using rule 40 (commonStmt)
    LOGIC_NOT_OP  reduce using rule 40 (commonStmt)
    IF            reduce using rule 40 (commonStmt)
    FOR           reduce using rule 40 (commonStmt)
    RETURN        reduce using rule 40 (commonStmt)
    TYPE          reduce using rule 40 (commonStmt)
    ID            reduce using rule 40 (commonStmt)
    CLOSE_B       reduce using rule 40 (commonStmt)
    OPEN_P        reduce using rule 40 (commonStmt)


State 57

   41 commonStmt: comLoop •

    INT_T         reduce using rule 41 (commonStmt)
    CONST_INT     reduce using rule 41 (commonStmt)
    MATH_SUB_OP   reduce using rule 41 (commonStmt)
    LOGIC_NOT_OP  reduce using rule 41 (commonStmt)
    IF            reduce using rule 41 (commonStmt)
    FOR           reduce using rule 41 (commonStmt)
    RETURN        reduce using rule 41 (commonStmt)
    TYPE          reduce using rule 41 (commonStmt)
    ID            reduce using rule 41 (commonStmt)
    CLOSE_B       reduce using rule 41 (commonStmt)
    OPEN_P        reduce using rule 41 (commonStmt)


State 58

   43 commonStmt: return • SEMIC

    SEMIC  shift, and go to state 92


State 59

   44 commonStmt: varDecl • SEMIC

    SEMIC  shift, and go to state 93


State 60

   42 commonStmt: attribution • SEMIC

    SEMIC  shift, and go to state 94


State 61

   61 attribution: logicalOr •
   62 logicalOr: logicalOr • LOGIC_OR_OP logicalAnd

    LOGIC_OR_OP  shift, and go to state 95

    SEMIC  reduce using rule 61 (attribution)


State 62

   63 logicalOr: logicalAnd •
   64 logicalAnd: logicalAnd • LOGIC_AND_OP compareExp

    LOGIC_AND_OP  shift, and go to state 96

    LOGIC_OR_OP  reduce using rule 63 (logicalOr)
    SEMIC        reduce using rule 63 (logicalOr)


State 63

   65 logicalAnd: compareExp •
   66 compareExp: compareExp • RELAT_LOW_OP relationExp

    RELAT_LOW_OP  shift, and go to state 97

    LOGIC_OR_OP   reduce using rule 65 (logicalAnd)
    LOGIC_AND_OP  reduce using rule 65 (logicalAnd)
    SEMIC         reduce using rule 65 (logicalAnd)


State 64

   67 compareExp: relationExp •
   68 relationExp: relationExp • GREATER_OP lowMathExp
   69            | relationExp • LESSER_OP lowMathExp
   70            | relationExp • RELAT_HIGH_OP lowMathExp

    GREATER_OP     shift, and go to state 98
    LESSER_OP      shift, and go to state 99
    RELAT_HIGH_OP  shift, and go to state 100

    LOGIC_OR_OP   reduce using rule 67 (compareExp)
    LOGIC_AND_OP  reduce using rule 67 (compareExp)
    RELAT_LOW_OP  reduce using rule 67 (compareExp)
    SEMIC         reduce using rule 67 (compareExp)


State 65

   71 relationExp: lowMathExp •
   72 lowMathExp: lowMathExp • MATH_ADD_OP highMathExp
   73           | lowMathExp • MATH_SUB_OP highMathExp

    MATH_ADD_OP  shift, and go to state 101
    MATH_SUB_OP  shift, and go to state 102

    LOGIC_OR_OP    reduce using rule 71 (relationExp)
    LOGIC_AND_OP   reduce using rule 71 (relationExp)
    GREATER_OP     reduce using rule 71 (relationExp)
    LESSER_OP      reduce using rule 71 (relationExp)
    RELAT_HIGH_OP  reduce using rule 71 (relationExp)
    RELAT_LOW_OP   reduce using rule 71 (relationExp)
    SEMIC          reduce using rule 71 (relationExp)


State 66

   74 lowMathExp: highMathExp •
   75 highMathExp: highMathExp • MATH_HIGH_OP unaryExp

    MATH_HIGH_OP  shift, and go to state 103

    MATH_ADD_OP    reduce using rule 74 (lowMathExp)
    MATH_SUB_OP    reduce using rule 74 (lowMathExp)
    LOGIC_OR_OP    reduce using rule 74 (lowMathExp)
    LOGIC_AND_OP   reduce using rule 74 (lowMathExp)
    GREATER_OP     reduce using rule 74 (lowMathExp)
    LESSER_OP      reduce using rule 74 (lowMathExp)
    RELAT_HIGH_OP  reduce using rule 74 (lowMathExp)
    RELAT_LOW_OP   reduce using rule 74 (lowMathExp)
    SEMIC          reduce using rule 74 (lowMathExp)


State 67

   76 highMathExp: unaryExp •

    MATH_HIGH_OP   reduce using rule 76 (highMathExp)
    MATH_ADD_OP    reduce using rule 76 (highMathExp)
    MATH_SUB_OP    reduce using rule 76 (highMathExp)
    LOGIC_OR_OP    reduce using rule 76 (highMathExp)
    LOGIC_AND_OP   reduce using rule 76 (highMathExp)
    GREATER_OP     reduce using rule 76 (highMathExp)
    LESSER_OP      reduce using rule 76 (highMathExp)
    RELAT_HIGH_OP  reduce using rule 76 (highMathExp)
    RELAT_LOW_OP   reduce using rule 76 (highMathExp)
    SEMIC          reduce using rule 76 (highMathExp)


State 68

   80 unaryExp: element •

    MATH_HIGH_OP   reduce using rule 80 (unaryExp)
    MATH_ADD_OP    reduce using rule 80 (unaryExp)
    MATH_SUB_OP    reduce using rule 80 (unaryExp)
    LOGIC_OR_OP    reduce using rule 80 (unaryExp)
    LOGIC_AND_OP   reduce using rule 80 (unaryExp)
    GREATER_OP     reduce using rule 80 (unaryExp)
    LESSER_OP      reduce using rule 80 (unaryExp)
    RELAT_HIGH_OP  reduce using rule 80 (unaryExp)
    RELAT_LOW_OP   reduce using rule 80 (unaryExp)
    SEMIC          reduce using rule 80 (unaryExp)


State 69

   13 stateRecord: STATE_R_T ID OPEN_B • srVariables CLOSE_B

    INT_T  shift, and go to state 104

    srVariables  go to state 105


State 70

   24 queueTypeDecl: INT_T • ID SEMIC

    ID  shift, and go to state 106


State 71

   22 queueType: EVENT_T ID OPEN_B queueTypeDecl • CLOSE_B SEMIC
   23 queueTypeDecl: queueTypeDecl • INT_T ID SEMIC

    INT_T    shift, and go to state 107
    CLOSE_B  shift, and go to state 108


State 72

   29 enquFunc: BOOL_T ENQUEUE OPEN_P • EVENT_T ID CLOSE_P OPEN_B comMultStmt CLOSE_B

    EVENT_T  shift, and go to state 109


State 73

   30 nextEvent: EVENT_T NEXT_EVENT • OPEN_P CLOSE_P OPEN_B comMultStmt CLOSE_B

    OPEN_P  shift, and go to state 110


State 74

   16 scheduler: SCHEDULER_T ID OPEN_B queues enquFunc nextEvent CLOSE_B •

    DISPATCH_T_T  reduce using rule 16 (scheduler)


State 75

   28 dropFunc: INT_T ID OPEN_P • QUEUE_T ID COMMA EVENT_T ID CLOSE_P OPEN_B dropMultStmt CLOSE_B

    QUEUE_T  shift, and go to state 111


State 76

   25 queueDecl: QUEUE_T LESSER_OP • ID GREATER_OP ID OPEN_P CONST_INT COMMA CONST_INT COMMA CONST_INT COMMA ID CLOSE_P

    ID  shift, and go to state 112


State 77

    7 dispDecl: ID ARROW • OPEN_B processorIds CLOSE_B SEMIC

    OPEN_B  shift, and go to state 113


State 78

    4 dispatcher: DISPATCH_T_T ID ATTRIB_OP OPEN_B dispMult CLOSE_B • SEMIC

    SEMIC  shift, and go to state 114


State 79

    5 dispMult: dispMult COMMA • dispDecl

    ID  shift, and go to state 41

    dispDecl  go to state 115


State 80

   58 varDecl: INT_T ID •
   59        | INT_T ID • ATTRIB_OP attribution

    ATTRIB_OP  shift, and go to state 116

    SEMIC  reduce using rule 58 (varDecl)


State 81

   81 element: ID •

    MATH_HIGH_OP   reduce using rule 81 (element)
    MATH_ADD_OP    reduce using rule 81 (element)
    MATH_SUB_OP    reduce using rule 81 (element)
    LOGIC_OR_OP    reduce using rule 81 (element)
    LOGIC_AND_OP   reduce using rule 81 (element)
    GREATER_OP     reduce using rule 81 (element)
    LESSER_OP      reduce using rule 81 (element)
    RELAT_HIGH_OP  reduce using rule 81 (element)
    RELAT_LOW_OP   reduce using rule 81 (element)
    SEMIC          reduce using rule 81 (element)


State 82

   78 unaryExp: MATH_SUB_OP unaryExp •

    MATH_HIGH_OP   reduce using rule 78 (unaryExp)
    MATH_ADD_OP    reduce using rule 78 (unaryExp)
    MATH_SUB_OP    reduce using rule 78 (unaryExp)
    LOGIC_OR_OP    reduce using rule 78 (unaryExp)
    LOGIC_AND_OP   reduce using rule 78 (unaryExp)
    GREATER_OP     reduce using rule 78 (unaryExp)
    LESSER_OP      reduce using rule 78 (unaryExp)
    RELAT_HIGH_OP  reduce using rule 78 (unaryExp)
    RELAT_LOW_OP   reduce using rule 78 (unaryExp)
    SEMIC          reduce using rule 78 (unaryExp)


State 83

   77 unaryExp: LOGIC_NOT_OP unaryExp •
